# IntegralSolver

./: .gitignore  README.md
Manuals/: alkf2.pdf.crdownload
Programms/: Tables.nb  Visualization.nb  Visualization_singular_integral.nb
Programms/Code/: CMakeLists.txt  main.cpp
Programms/Code/Libs/: FileIO.cpp  FileIO.h  IntegralProblem.cpp  IntegralProblem.h  IntegralProblemSolver.cpp  IntegralProblemSolver.h  SLAEsolver.h  algebra.cpp  algebra.h
QuestionReport/: Report_LAB5.tex
QuestionReport/style/: fn2kursstyle.sty
